[package]
name = "wai-bindgen-wasmtime-impl"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
wai-bindgen-gen-core = { path = "../gen-core", version = "0.1.1" }
wai-bindgen-gen-wasmtime = { path = "../gen-wasmtime", version = "0.1.1" }

[features]
tracing = []
async = []
