[package]
name = "wai-bindgen-wasmtime"
description = "Generate WAI glue for a Rust Wasmtime host"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0"
bitflags = "1.2"
thiserror = "1.0"
wasmtime = "0.38.0"
wai-bindgen-wasmtime-impl = { path = "../wasmtime-impl", version = "0.2.0" }
tracing-lib = { version = "0.1.26", optional = true, package = "tracing" }
async-trait = { version = "0.1.50", optional = true }

[features]
# Enables generated code to emit events via the `tracing` crate whenever wasm is
# entered and when native functions are called. Note that tracing is currently
# only done for imported functions.
tracing = ["tracing-lib", "wai-bindgen-wasmtime-impl/tracing"]

# Enables async support for generated code, although when enabled this still
# needs to be configured through the macro invocation.
async = ["async-trait", "wai-bindgen-wasmtime-impl/async"]
