[package]
name = "wasmer-wasmer-wit-bindgen-demo"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
publish = false
license = "MIT"
description = "wasmer-wit-bindgen-gen-c"

[lib]
crate-type = ['cdylib']
test = false
doctest = false

[dependencies]
wasmer-wit-bindgen-gen-core = { version = "0.1.0", path = '../gen-core' }
wasmer-wit-bindgen-gen-rust-wasm = { version = "0.1.0", path = '../gen-rust-wasm' }
wasmer-wit-bindgen-gen-wasmtime = { version = "0.1.0", path = '../gen-wasmtime' }
wasmer-wit-bindgen-gen-wasmtime-py = { version = "0.1.0", path = '../gen-wasmtime-py' }
wasmer-wit-bindgen-gen-js = { version = "0.1.0", path = '../gen-js' }
wasmer-wit-bindgen-gen-c = { version = "0.1.0", path = '../gen-c' }
wasmer-wit-bindgen-gen-markdown = { version = "0.1.0", path = '../gen-markdown' }
wasmer-wit-bindgen-gen-spidermonkey = { version = "0.1.0", path = '../gen-spidermonkey' }
wasmer-wit-bindgen-gen-wasmer = { version = "0.1.0", path = '../gen-wasmer' }
wasmer-wit-bindgen-gen-wasmer-py = { version = "0.1.0", path = '../gen-wasmer-py' }
wasmer-wit-bindgen-rust = { version = "0.1.0", path = '../rust-wasm' }
wasmprinter = "0.2.29"
